--- a/lecture 6/templates/index.html
+++ b/lecture 6/templates/index.html
@@ -36,6 +36,7 @@
             <li><a href="" class="nav-link" data-page="first">First Page</a></li>
             <li><a href="" class="nav-link" data-page="second">Second Page</a></li>
             <li><a href="" class="nav-link" data-page="third">Third Page</a></li>
+            <li><a href="" class="nav-link" data-page="developer">Developer</a></li>
         </ul>
         <hr>
         <div id="body">
